# substrate-evm-npos

./: Cargo.toml  README.md
.github/: CODEOWNERS
.github/workflows/: build-specs.yml
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  command_helper.rs  rpc.rs  service.rs
pallets/fee_multipliers/: Cargo.toml
pallets/fee_multipliers/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  precompiles.rs
scripts/: purge_state.sh
