[package]
name = "nfid-node"
version = "4.0.0-dev"
description = "NFID Blockchain"
authors = []
homepage = ""
edition = "2021"
license = "Unlicense"
publish = false
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "nfid-node"

[dependencies]
bs58 = "0.4.0"
async-trait = "0.1"
clap = { version = "3.1", features = ["derive"] }
futures = "0.3.21"
log = "0.4.17"

# Parity
codec = { package = "parity-scale-codec", version = "3.1", features = [
    "derive",
] }
jsonrpsee = { version = "0.14.0", features = ["server", "macros"] }

sc-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", features = [
    "wasmtime",
] }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
sc-executor = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", features = [
    "wasmtime",
] }
sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", features = [
    "wasmtime",
] }
sc-telemetry = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
sc-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
sp-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
sc-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
sp-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
sp-transaction-storage-proof = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
sc-consensus-uncles = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
sp-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }

# These dependencies are used for the node template's RPCs
sc-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
fp-rpc = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.25" }
fc-rpc-core = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.25" }
fc-rpc = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.25" }
fc-db = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.25" }
fc-mapping-sync = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.25" }
fc-cli = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.25" }
fp-storage = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.25" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }

# Local Dependencies
nfid-runtime = { path = "../runtime", default-features = false, features = [
    "std",
] }

# CLI-specific dependencies
try-runtime-cli = { optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }

[features]
default = []
runtime-benchmarks = ["nfid-runtime/runtime-benchmarks"]
